app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
  --footer-bg: #272e35;
  --footer-muted: #9da6af;
}

/*tw variables*/
@theme inline {
    --color-logo-color: var(--logo-color);
    --color-footer-color: var(--footer-bg);
    --color-footer-muted-color: var(--footer-muted);
}

body {
  background: var(--background);
  color: var(--foreground);
}

#ab-market main.main--white-bg,
#ab-market .footer-2025 {
    background: transparent;
}

#ab-market .header-grey-section p {
    margin: 0;
}


@media (max-width: 600px) {
    /*Не убирать, сломается верстка на телефоне*/
    .header__inner {
        display: none !important;
    }
}

@media (max-width: 640px) {
    .hide-on-mobile {
        display: none !important;
    }
}

/* Green line styles   */

:root {
    --1px: 1px;
    --logo-width: 162px;
    --logo-left-offset: 57px;
    --logo-round-offset: 57px;
    --logo-color: #009399;
}

#ab-market .app-green-line-wrapper {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
}

#ab-market .container-2025.app-green-line {
    opacity: 1;
    background: linear-gradient(
            to right,
            transparent calc(var(--logo-round-offset) - var(--1px)),
            var(--logo-color) calc(var(--logo-round-offset)),
            var(--logo-color) calc(var(--logo-round-offset) + var(--logo-width)),
            transparent calc(var(--logo-round-offset) + var(--logo-width) + var(--1px))
    );
}

#ab-market .app-logo {
    width: calc(var(--logo-width) + var(--logo-round-offset));
    padding-left: var(--logo-round-offset);
}

#ab-market .container-2025,
#ab-market .have-questions-section-2025 {
    opacity: 0.9;
}

#ab-market .container-2025 .KovrolinWhProgramSlider_root__wYpkC {
    background: #f0f3f4;
    border-radius: 12px;
    padding: 0 20px;
}

#ab-market .breadcrumbs {
    opacity: 0.9;
    background: #f0f3f4;
    padding-left: 10px;
    padding-bottom: 5px;
}

#ab-market footer {
    position: relative;
}

@media (max-width: 756px) {
    #ab-market .app-green-line-wrapper {
        display: none;
    }
    #ab-market .app-logo {
        padding-left: 0;
    }
    #ab-market .container-2025,
    #ab-market .have-questions-section-2025 {
        opacity: 1;
    }
    #ab-market .breadcrumbs {
        opacity: 1;
        background: none;
        padding-left: 0;
        padding-bottom: 0;
    }
}

/* kovrolin page */

#ab-market [class*="KovrolinDesignBase_root"],
#ab-market [class*="KovrolinColorMatch_left"],
#ab-market [class*="KovrolinColorMatch_rightItem"],
#ab-market [class*="KovrolinDescriptions_image"]:first-child {
    border-color: #CFCFCF;
}
#ab-market .have-questions-section {
   background:  transparent;
}

#ab-market [class*="KovrolinWhProgramSlide_root"],
#ab-market [class*="KovrolinCoatingsSlide_root"] {
    background-color: white;
    margin-right: 5px;
}

#ab-market [class*="KovrolinDeliveryPayment_root"] {
    background: transparent;
}
#ab-market .have-questions-block {
    background:white;
}

#ab-market .header__callback-link.telegram {
    background-image: url(/ab-market/telegram.svg);
}

[style*="background:#F0F3F4"] {
    background: transparent !important;
}

/*footer logo shadow*/
.footer-logo-shadow {
    box-shadow:
            inset 2px 2px 12px rgba(0,0,0,0.4),
            inset -1px -1px 4px rgba(255,255,255,0.1);
}

